force-app/main/default/objects/Addition_Deduction__c/Addition_Deduction__c.object-meta.xml
<CustomObject>
    <label>Addition/Deduction</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Addition/Deduction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdditionDeductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>