force-app/main/default/objects/Addition_Deduction__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>AdditionDeductions</relationshipLabel>
    <relationshipName>AdditionDeductions</relationshipName>
    <type>Lookup</type>
</CustomField>